kustomize/overlays/scots-lab/apps/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
spec:
  selector:
    app: it-tools
  ports:
    - name: proxy
      port: 4180
      targetPort: 4180
