kustomize/overlays/scots-lab/apps/it-tools/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools
  namespace: it-tools
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: IT-Tools
    gethomepage.dev/group: Tools
    gethomepage.dev/description: Developer Utilities
    gethomepage.dev/icon: it-tools.png
    gethomepage.dev/href: https://tools.srbii.com
    gethomepage.dev/weight: '41'
spec:
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  hostnames:
  - tools.srbii.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: it-tools
      port: 4180
